--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
-                center: {lat: 37.422, lng: -122.085},
-                zoom: 10
+                zoom: 4,
+                center: { lat: 39.5, lng: -89.25 } // Central Illinois
             });
 
             infoWindow = new google.maps.InfoWindow({
